--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,45 @@
   font-family: Monaco;
 }
 
+.section {
+  padding: 10px;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.description {
+  font-style: italic;
+  border-top: 2px solid #495e57;
+}
+
+.item-name {
+  margin: 25px;
+  font-size: 12px;
+}
+
+b {
+  float: right;
+  margin-top: -15px;
+  color: darkcyan;
+}
+
+div > h3 {
+  font-size: 20px;
+  margin: 20px;
+  text-align: center;
+  color: #495e57;
+}
+
+.label + .low {
+  color: brown;
+}
+
+div ~ div {
+  color: rgb(90, 90, 90);
+}
+
 .menu,
 .ll {
   text-align: center;
